@@ -1,4 +1,4 @@
-$Id: History,v 1.33 2001-11-12 05:45:56 asaim Exp $
+$Id: History,v 1.34 2001-11-20 23:21:41 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Nov 20 2001, M.Asai (event-V03-02-08)
+- Add check whether the primary vertex is inside of thw world volume.
+- Move set method of position and time from G4ParticleGun to G4VPrimaryGenerator
+  so that G4HEPEvtInterface can accept the primary vertex position
 
 Nov 10 2001, M.Asai (event-V03-02-07)
 - Tagged.
